<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star_wars_bg"
    tools:context=".presentation.home.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/star_wars_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDevelopedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/star_wars"
        android:text="@string/home_fragment_developed_by"
        android:textColor="#FFE919"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewCharacters"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#FFE919"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLogo">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="3dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/star_wars_characters"
                        app:riv_corner_radius_top_left="10dp"
                        app:riv_corner_radius_top_right="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/star_wars"
                        android:text="@string/home_fragment_characters"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewVehicles"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#FFE919"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLogo">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="3dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/star_wars_vehicles"
                        app:riv_corner_radius_top_left="10dp"
                        app:riv_corner_radius_top_right="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/star_wars"
                        android:text="@string/home_fragment_vehicles"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewPlanets"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#FFE919"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintStart_toStartOf="@+id/cardViewCharacters"
                app:layout_constraintTop_toBottomOf="@+id/cardViewCharacters">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_margin="3dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/star_wars_planets"
                        app:riv_corner_radius_top_left="10dp"
                        app:riv_corner_radius_top_right="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/star_wars"
                        android:text="@string/home_fragment_planets"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewStarships"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:backgroundTint="#FFE919"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="@+id/cardViewVehicles"
                app:layout_constraintTop_toBottomOf="@+id/cardViewVehicles">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="3dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/star_wars_starships"
                        app:riv_corner_radius_top_left="10dp"
                        app:riv_corner_radius_top_right="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/star_wars"
                        android:text="@string/home_fragment_starships"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewSpecies"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#FFE919"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintStart_toStartOf="@+id/cardViewPlanets"
                app:layout_constraintTop_toBottomOf="@+id/cardViewPlanets">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="3dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/star_wars_species"
                        app:riv_corner_radius_top_left="10dp"
                        app:riv_corner_radius_top_right="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/star_wars"
                        android:text="@string/home_fragment_species"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewFilms"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#FFE919"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="@+id/cardViewStarships"
                app:layout_constraintTop_toBottomOf="@+id/cardViewStarships">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="3dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/star_wars_films"
                        app:riv_corner_radius_top_left="10dp"
                        app:riv_corner_radius_top_right="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/star_wars"
                        android:text="@string/home_fragment_films"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>